# PassTheError

./: CMakeLists.txt  NOTICE  README.md  build.sh  pass_the_error.cpp  pass_the_error.thrift  pass_the_error_error.cpp  todo.txt
include/: pass_the_error.hpp  pass_the_error_error.hpp
source/: pass_the_error.cpp  pass_the_error_error.cpp
